# Quanteam

./: .env.example  .gitignore  GOVERNANCE.md  Makefile  QA_Fetch_Integration_for_GPTPro.md  Quant‑EAM Whole View Framework.md  README.md  contracts.7z  create_subagent.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
wequant/: .env.example  .gitignore  Quant-EAM_Architecture_wequant_vectorbt_v0.3.md  Quant-EAM：量化经验资产管理系统框架与流程（v1）.md  README.md  README_dk_ingest.md  _tmp_extract_financial.py  _tmp_extract_trade_dates.py  _tmp_parse_funcs.py  dk_ingest.py  pyproject.toml  pytest.ini  wequant.7z
wequant/docs/DOCS_V2/: 00_START_HERE.md  01_TAXONOMY.md  04_GOVERNANCE.md  99_WORKSPACE.md
wequant/docs/DOCS_V2/02_TEMPLATES/: TEMPLATE_DATAFLOW_FUNCTION_LEVEL.md  TEMPLATE_DOSSIER_PACKAGE.md  TEMPLATE_LESSON.md
wequant/docs/DOCS_V2/03_INDEX/: index.json  index_by_recency.md
wequant/docs/DOCS_V2/20_KB/: KB_DEV_RULES.md
wequant/env/: environment.linux.yml
wequant/tests/: test_import.py  test_imports.py
wequant/tests/e2e/: __init__.py  sample_codes.py  test_fetch_e2e.py  test_notebook_test_fetch_params_e2e.py  test_save_e2e.py  test_wefetch_full_e2e.py
wequant/tests/fixtures/: upstream_functions.json
wequant/tests/unit/: test_notebook_coverage.py  test_utils.py  test_wefetch_coverage.py
wequant/wequant/: config.py
wequant/wequant/test/: dk_daily_ingest_summary_20260204_1636.md  dk_monthly_sample_run_20260204_1327.md  dk_monthly_sample_run_20260204_1354.md  dk_monthly_sample_runner.py  fetch_sample_data.ipynb  save_dk.ipynb  save_dk_wefetch_wesu.ipynb  save_dk_wequant.ipynb  test_fetch.ipynb  test_save.ipynb  zsxq_xlsx_downloader.py
wequant/wequant/utils/: trade_dates.py
wequant/wequant/wefetch/: __init__.py  adj.py  query_ad.py  query_advance.py  stock.py
wequant/wequant/wesu/: __init__.py  adj.py  dk.py  dk_ingest.py  etf.py  future.py  lists.py  main.py  save_tdx.py  save_tdx_file.py  save_tdx_parallelism.py  stock.py
(+1263 files in other folders)
