[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-eam"
version = "0.0.0"
description = "Quant-EAM bootstrap: API + worker + tooling (Phase-00A)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Quant-EAM contributors"}]
dependencies = [
  "fastapi>=0.110",
  "jinja2>=3.1",
  "jsonschema>=4.21",
  "numpy>=1.26",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "uvicorn>=0.23",
  "vectorbt>=0.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "httpx>=0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
