[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wequant"
version = "0.1.0"
description = "WEQUANT data layer: WEFetch / WESU (MongoDB-backed) for stock/future/ETF."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "WEQUANT contributors"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "pymongo>=4.6",
  "python-dateutil>=2.8",
  "typing-extensions>=4.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
]
# Optional compatibility layer (only if you still want to call QUANTAXIS in transitional phase)
qa = [
  # "quantaxis>=<pin>",
]

[project.scripts]
wequant = "wequant.cli:main"

[tool.setuptools]
packages = [
  "wequant",
  "wequant.wefetch",
  "wequant.wesu",
  "wequant.utils",
  "wequant.compat",
  "wequant.datastruct"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
